<resources>
    <string name="app_name">laba5_2</string>
    <string name="text_name">"Имя: Илья"</string>
    <string name="text_age">"Возраст: 18"</string>
    <string name="text_specialization">"Специализация: программист"</string>

    <string name="text_photo">"Фото"</string>
    <string name="text_projects">"   Проекты"</string>
    <string name="text_achievements">"Достижения"</string>
</resources>