<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/frameLayout1"
        android:layout_width="match_parent"
        android:layout_height="135dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@color/First_color"/>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="125dp"
            android:layout_height="125dp"
            app:srcCompat="@drawable/previewfile_2678941056"
            android:layout_gravity="center"/>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="vertical"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout1">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_name"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_age"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_specialization"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_photo"
            android:gravity="center"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_projects"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_achievements"
            android:textSize="18sp"/>
    </LinearLayout>

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout1"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="292dp"
        app:columnCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="122dp"
            android:layout_height="122dp"
            app:srcCompat="@drawable/img_6"
            android:scaleType="fitXY"/>

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="122dp"
            android:layout_height="122dp"
            app:srcCompat="@drawable/img1"
            android:scaleType="fitXY"/>

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="122dp"
            android:layout_height="122dp"
            app:srcCompat="@drawable/img3"
            android:scaleType="fitXY"/>

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="122dp"
            android:layout_height="122dp"
            app:srcCompat="@drawable/img4" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="122dp"
            android:layout_height="122dp"
            app:srcCompat="@drawable/img2"
            />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="122dp"
            android:layout_height="122dp"
            app:srcCompat="@drawable/img5"
            android:scaleType="fitXY"/>
    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>